# gridaurora

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Alfven.py  Alfvén.py  AuroralProfile.py  CompareFilters.py  EllisonRamaty_flux.py  FluxGenerator.py  MANIFEST.in  MakeEigenprofileFluxInput.py  MakeIonoEigenprofile.py  PlotEmissionProfiles.py  PlotFilteredSpectrum.py  PlotFilters.py  PlotJGR2013.py  README.md  README.rst  calcemissions.py  eFluxGen.py  filterload.py  fortrandates.py  opticalmod.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_calcemissions.py  test_filterload.py  test_opticalmod.py  worldgrid.py  ztanh.py
gridaurora/: __init__.py  arcexcite.py  calcemissions.py  chapman.py  eFluxGen.py  filterload.py  fortrandates.py  loadtranscargrid.py  opticalmod.py  plots.py  readApF107.py  solarangle.py  to_ut1.py  worldgrid.py  writeeigen.py  zglow.py  ztanh.py
gridaurora/data/: RecentIndices.txt
gridaurora/precompute/: HoyaV10transmittance.h5  NE01transmittance.h5  Wratten21transmittance.h5  emccdQE.h5  vjeinfc.h5
gridaurora/tests/: test_sza.py  test_time.py
precompute/: BG3transmittance.h5  Wratten32transmittance.h5  ixonWindowT.h5  trans_jgr2013a.h5  vjeinfc.h5
test/: test.py
tests/: test.py  test_all.py  test_filter.py  test_grid.py  test_read.py  test_sza.py  test_time.py
