[metadata]
name = gridaurora
version = 1.3.4
author = Michael Hirsch, Ph.D.
description = Gridding for auroral and ionospheric modeling
url = https://github.com/scivision/gridaurora
keywords =
  aeronomy
  aurora
  ionosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  requests
  numpy
  xarray
  sciencedates

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn
  pathvalidate
io =
  scipy
  h5py
  astropy
  lowtran
  transcarread
models =
  reesaurora
  glowaurora
  lowtran

[options.entry_points]
console_scripts =
  AuroralProfile = AuroralProfile:main
  EllisonRamaty = EllisonRamaty_flux:main
  AuroralFluxGenerator = FluxGenerator:main
  MakeEigenprofileFluxInput = MakeEigenprofileFluxInput:main
  MakeIonoEigenprofile = MakeIonoEigenprofile:main
  PlotEmissionProfiles = PlotEmissionProfiles:main
  PlotFilteredSpectrum = PlotFilteredSpectrum:main

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*
  */build/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
