[metadata]
name = gridaurora
version = 1.4.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Gridding for auroral and ionospheric modeling
url = https://github.com/space-physics/gridaurora
keywords =
  aeronomy
  aurora
  ionosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  xarray

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn
  pathvalidate
io =
  scipy
  h5py
  astropy
  lowtran
  transcarread
models =
  reesaurora
  glowaurora
  lowtran

[options.entry_points]
console_scripts =
